fix #5086: adding support for socks proxies